vlib/v/parser/tests/too_many_generics_err.out
vlib/v/parser/tests/too_many_generics_err.vv:1:40: error: too many generic parameters, maximum is 9
    1 | fn too_many<A, B, C, D, E, F, G, H, I, J, K>() {}
      |                                        ^
