vlib/v/parser/tests/too_many_generics_err.vv
fn too_many<A, B, C, D, E, F, G, H, I, J, K>() {}
